After new Java version, some code blocks are updated